force-app/main/default/objects/Trip__c/fields/Depature_Time__c.field-meta.xml
<CustomField>
    <fullName>Depature_Time__c</fullName>
    <label>Depature Time</label>
    <type>DateTime</type>
</CustomField>