force-app/main/default/objects/Trip__c/fields/OperatorBusType__c.field-meta.xml
<CustomField>
    <fullName>OperatorBusType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OperatorBusType</label>
    <referenceTo>OperatorBusType__c</referenceTo>
    <relationshipLabel>OperatorBusType</relationshipLabel>
    <relationshipName>Trips2</relationshipName>
    <type>Lookup</type>
</CustomField>