force-app/main/default/objects/Trip__c/fields/OperatorName__c.field-meta.xml
<CustomField>
    <fullName>OperatorName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OperatorName</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trips</relationshipLabel>
    <relationshipName>Trips</relationshipName>
    <type>Lookup</type>
</CustomField>