force-app/main/default/objects/Trip__c/fields/OperatorRoute__c.field-meta.xml
<CustomField>
    <fullName>OperatorRoute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OperatorRoute</label>
    <referenceTo>OperatorRoute__c</referenceTo>
    <relationshipLabel>Trips</relationshipLabel>
    <relationshipName>OperatorRoute1</relationshipName>
    <type>Lookup</type>
</CustomField>