force-app/main/default/objects/Trip__c/fields/Route_Detail__c.field-meta.xml
<CustomField>
    <fullName>Route_Detail__c</fullName>
    <formula>OperatorRoute__r.MasterRoute__r.Source__r.Name + &#39;--&gt;&#39; +  OperatorRoute__r.MasterRoute__r.Destination__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route Detail</label>
    <type>Text</type>
</CustomField>