force-app/main/default/objects/Trip__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Arrival_Time__c</columns>
    <columns>Depature_Time__c</columns>
    <columns>OperatorBusType__c</columns>
    <columns>OperatorName__c</columns>
    <columns>OperatorRoute__c</columns>
    <columns>Route_Detail__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>